--- a/config.json
+++ b/config.json
@@ -21,7 +21,7 @@
             "storage": "data.sqlite"
         }
     },
-    "APPSTATEPATH": "appstate.json",
+    "APPSTATEPATH": "appstates.json",
     "FCAOption": {
         "forceLogin": true,
         "listenEvents": true,
